Handle account paused status on home screen

--- a/app/src/main/res/layout/generic_warning_layout.xml
+++ b/app/src/main/res/layout/generic_warning_layout.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.wolfpackdigital.cashli.presentation.entities.HomeGenericWarningInfo" />
+            type="com.wolfpackdigital.cashli.presentation.entities.GenericWarningInfo" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
