--- a/app/src/main/res/layout/request_cash_balance_layout.xml
+++ b/app/src/main/res/layout/request_cash_balance_layout.xml
@@ -100,5 +100,23 @@
             app:layout_constraintVertical_bias="0.0"
             tools:text="Scheduled repayment date: February 3, 2023" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_balance_action"
+            style="@style/Widget.Cashli.Button.Accent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_24dp"
+            android:layout_marginTop="@dimen/dimen_24dp"
+            android:layout_marginBottom="@dimen/dimen_32dp"
+            android:onClick="@{() -> requestCashAdvanceInfo.buttonAction.invoke()}"
+            android:text="@string/unpause_your_membership"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_repayment_date"
+            app:layout_constraintVertical_bias="1.0"
+            app:visibility="@{requestCashAdvanceInfo.accountPaused}"
+            tools:visibility="visible" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
