--- a/app/src/main/res/navigation/link_account_graph.xml
+++ b/app/src/main/res/navigation/link_account_graph.xml
@@ -6,6 +6,7 @@
     app:startDestination="@id/linkBankAccountInformativeFragment">
 
     <include app:graph="@navigation/claim_cash_graph" />
+    <include app:graph="@navigation/ineligible_graph" />
 
     <action
         android:id="@+id/action_global_claimCashGraph"
@@ -16,16 +17,9 @@
         android:name="com.wolfpackdigital.cashli.presentation.linkBank.informative.LinkBankAccountInformativeFragment"
         android:label="LinkBankAccountInformativeFragment"
         tools:layout="@layout/fr_link_bank_account_informative">
-        <action
-            android:id="@+id/action_linkBankAccountInformativeFragment_to_ineligibleInformativeFragment"
-            app:destination="@id/ineligibleInformativeFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/ineligibleInformativeFragment"
-        android:name="com.wolfpackdigital.cashli.presentation.linkBank.ineligible.IneligibleInformativeFragment"
-        android:label="IneligibleInformativeFragment"
-        tools:layout="@layout/fr_ineligible_informative">
-        <deepLink app:uri="android-app://com.wolfpackdigital.cashli/ineligibleInformative" />
-    </fragment>
 
+        <action
+            android:id="@+id/action_linkBankAccountInformativeFragment_to_ineligible_graph"
+            app:destination="@id/ineligible_graph" />
+    </fragment>
 </navigation>
