--- a/app/src/main/res/layout/item_delivery_method.xml
+++ b/app/src/main/res/layout/item_delivery_method.xml
@@ -20,7 +20,7 @@
         android:backgroundTint="@android:color/transparent"
         android:clipToPadding="false"
         android:outlineProvider="background"
-        app:disabled="@{viewModel.disabled}">
+        app:disabled="@{viewModel.disabled || !viewModel.deliveryMethod.available}">
 
         <ImageView
             android:id="@+id/background_iv"
@@ -92,6 +92,7 @@
             android:layout_marginStart="@dimen/dimen_8dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_arrow_forward"
+            app:hidden="@{!viewModel.deliveryMethod.available}"
             app:layout_constraintBottom_toBottomOf="@id/delivery_method_name_tv"
             app:layout_constraintStart_toEndOf="@id/delivery_method_name_tv"
             app:layout_constraintTop_toTopOf="@id/delivery_method_name_tv"
@@ -108,6 +109,7 @@
             android:layout_marginEnd="@dimen/dimen_20dp"
             android:text="@{viewModel.cost}"
             android:textColor="@{ContextCompat.getColor(context, viewModel.deliveryMethod.tint)}"
+            app:hidden="@{!viewModel.deliveryMethod.available}"
             app:layout_constraintBaseline_toBaselineOf="@id/delivery_method_name_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
@@ -124,9 +126,9 @@
             android:text="@{viewModel.deliveryMethod.description}"
             android:textAlignment="textStart"
             android:textColor="@color/colorGrayDC"
-            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintEnd_toStartOf="@id/iv_info"
             app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="@id/delivery_method_name_tv"
             app:layout_constraintTop_toBottomOf="@id/delivery_method_name_tv"
             tools:text="1-3 working days" />
@@ -135,8 +137,8 @@
             android:id="@+id/iv_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:importantForAccessibility="no"
             android:layout_marginStart="@dimen/dimen_4dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_info"
             app:layout_constraintBottom_toBottomOf="@id/delivery_method_description_tv"
             app:layout_constraintEnd_toEndOf="@id/delivery_method_value_tv"
