Add cash advance history

--- a/app/src/main/res/layout/item_membership_advance.xml
+++ b/app/src/main/res/layout/item_membership_advance.xml
@@ -13,7 +13,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_root"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_top"
