--- a/app/src/main/res/layout/fr_membership.xml
+++ b/app/src/main/res/layout/fr_membership.xml
@@ -10,56 +10,68 @@
             type="com.wolfpackdigital.cashli.presentation.membership.MembershipViewModel" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/sv_root"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_fragment_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
-        android:fillViewport="true">
+        android:background="@color/colorPrimaryDark">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_fragment_root"
+        <ImageView
+            android:id="@+id/iv_dots"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_dots"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/iv_dots"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:importantForAccessibility="no"
-                android:src="@drawable/ic_dots"
-                app:layout_constraintTop_toTopOf="parent" />
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:viewModel="@{viewModel.toolbar}" />
 
-            <include
-                android:id="@+id/toolbar"
-                layout="@layout/toolbar_layout"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:viewModel="@{viewModel.toolbar}" />
+        <com.wolfpackdigital.cashli.shared.utils.views.ArcBackgroundView
+            android:id="@+id/arc_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/dimen_56dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="invisible" />
 
-            <com.wolfpackdigital.cashli.shared.utils.views.ArcBackgroundView
-                android:id="@+id/arc_view"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="@dimen/dimen_56dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="invisible" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_membership_and_advances"
+            style="@style/RecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="@dimen/dimen_20dp"
+            android:layout_marginTop="@dimen/dimen_44dp"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/dimen_100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/arc_view"
+            app:layout_constraintVertical_bias="0.0"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_membership_advance" />
 
-            <include
-                android:id="@+id/membership_item"
-                layout="@layout/item_membership_advance"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/dimen_20dp"
-                android:layout_marginTop="@dimen/dimen_64dp"
-                app:layout_constraintTop_toTopOf="@id/arc_view"
-                app:visibility="@{viewModel.membershipItem != null}"
-                app:viewModel="@{viewModel.membershipItem}" />
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/fab_scroll_to_top"
+            style="@style/FloatingActionButton.Expanded"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dimen_20dp"
+            android:contentDescription="@null"
+            android:text="@string/back_to_top"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:visibility="visible" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
