--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="colorRed62">#FD4D62</color>
     <color name="colorGreen71">#07D171</color>
     <color name="colorPurpleF3">#714EF3</color>
+    <color name="colorYellow35">#FDD835</color>
 
     <color name="colorClaimCashGradientStart">#5840E9</color>
     <color name="colorClaimCashGradientCenter">#915EFF</color>
