--- a/app/src/main/res/layout/fr_claim_cash.xml
+++ b/app/src/main/res/layout/fr_claim_cash.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.core.widget.NestedScrollView
+        style="@style/ScrollView.VerticalPinkScrollBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
