Possible fix for text being cut off in the T&C agreement section - CAS-179

--- a/app/src/main/res/layout/fr_choose_password.xml
+++ b/app/src/main/res/layout/fr_choose_password.xml
@@ -103,17 +103,17 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_terms_and_conditions"
-                style="@style/TextView.Regular"
-                android:layout_width="0dp"
+                style="@style/TextView.S1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_8dp"
                 android:layout_marginTop="@dimen/dimen_32dp"
-                android:layout_marginEnd="@dimen/dimen_32dp"
                 android:layout_marginBottom="@dimen/dimen_32dp"
+                android:paddingEnd="@dimen/dimen_32dp"
                 android:textAlignment="viewStart"
                 android:textColor="@color/colorGrayDC"
-                android:textSize="@dimen/size_14sp"
                 app:actions="@{viewModel.termsAndConditionsSpanActions}"
+                app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toTopOf="@id/btn_finish_signup"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -121,6 +121,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/et_confirm_password"
                 app:layout_constraintVertical_bias="1.0"
                 app:textWithActions="@{viewModel.termsAndConditionsTextId}"
+                tools:ignore="RtlSymmetry"
                 tools:text="@string/terms_and_conditions" />
 
             <com.google.android.material.button.MaterialButton
