--- a/app/src/main/res/layout/fr_home.xml
+++ b/app/src/main/res/layout/fr_home.xml
@@ -49,7 +49,7 @@
             android:layout_marginTop="@dimen/dimen_16dp"
             android:layout_marginEnd="@dimen/dimen_68dp"
             android:onClick="@{() -> viewModel.goToClaimCash()}"
-            android:text="@{@string/hello_user(viewModel.currentUserProfile.firstName)}"
+            android:text="@{viewModel.currentUserProfile.firstName == null ? @string/hello : @string/hello_user(viewModel.currentUserProfile.firstName)}"
             android:textAlignment="viewStart"
             android:textSize="@dimen/size_28sp"
             app:layout_constraintEnd_toEndOf="parent"
