Fix barrier not working

--- a/app/src/main/res/layout/bank_short_details_layout.xml
+++ b/app/src/main/res/layout/bank_short_details_layout.xml
@@ -30,7 +30,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/dimen_24dp">
+            android:paddingVertical="@dimen/dimen_24dp"
+            app:layout_optimizationLevel="none">
 
             <ImageView
                 android:id="@+id/iv_bank"
