--- a/app/src/main/res/layout/item_bank_transaction.xml
+++ b/app/src/main/res/layout/item_bank_transaction.xml
@@ -26,7 +26,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/dimen_12dp">
+            android:paddingVertical="@dimen/dimen_12dp"
+            app:layout_optimizationLevel="none">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_merchant_name"
