--- a/app/src/main/res/layout/fr_claim_cash.xml
+++ b/app/src/main/res/layout/fr_claim_cash.xml
@@ -205,12 +205,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/dimen_20dp"
-                android:text="@{viewModel.dueDate}"
                 android:textAlignment="textEnd"
+                app:isZonedDate="@{false}"
                 app:layout_constraintBottom_toBottomOf="@id/tv_due_date_label"
                 app:layout_constraintEnd_toEndOf="@id/ml_cash_amount"
                 app:layout_constraintStart_toEndOf="@id/tv_due_date_label"
                 app:layout_constraintTop_toTopOf="@id/tv_due_date_label"
+                app:stringDate="@{viewModel.cashAdvancesLimits.repaymentDate}"
                 tools:text="February 15th, 2023" />
 
             <TextView
@@ -257,6 +258,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_48dp"
                 android:layout_marginBottom="@dimen/dimen_36dp"
+                android:enabled="@{viewModel.cashAdvancesLimits != null}"
                 android:onClick="@{() -> viewModel.continueToQuiz()}"
                 android:text="@string/continue_name"
                 app:contentPadding="0dp"
