--- a/app/src/main/res/layout/fr_quiz.xml
+++ b/app/src/main/res/layout/fr_quiz.xml
@@ -93,6 +93,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_24dp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@id/quiz_first_question"
                 app:layout_constraintStart_toStartOf="@id/quiz_first_question"
                 app:layout_constraintTop_toBottomOf="@id/quiz_first_question"
@@ -167,7 +168,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_4dp"
                 app:layout_constraintTop_toBottomOf="@id/ll_tip_selection"
-                app:viewState="@{viewModel.tipSeekbarVisible ? View.VISIBLE : View.GONE }" />
+                app:visibility="@{viewModel.tipSeekbarVisible}" />
 
             <TextView
                 android:id="@+id/tv_footnote"
@@ -191,6 +192,7 @@
                 android:layout_marginTop="@dimen/dimen_56dp"
                 android:layout_marginEnd="@dimen/dimen_24dp"
                 android:layout_marginBottom="@dimen/dimen_64dp"
+                android:enabled="@{viewModel.isContinueButtonEnabled}"
                 android:onClick="@{()-> viewModel.onContinueClicked()}"
                 android:text="@string/continue_name"
                 app:layout_constraintBottom_toBottomOf="parent"
