--- a/app/src/main/res/layout/fr_choose_password.xml
+++ b/app/src/main/res/layout/fr_choose_password.xml
@@ -19,11 +19,15 @@
         style="@style/ScrollView.VerticalPinkScrollBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         tools:background="@color/colorPrimaryDark">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:clipChildren="false"
+            android:clipToPadding="false">
 
             <include
                 android:id="@+id/toolbar_layout"
@@ -101,19 +105,18 @@
                 app:layout_constraintTop_toTopOf="@id/tv_terms_and_conditions"
                 app:useMaterialThemeColors="false" />
 
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:id="@+id/tv_terms_and_conditions"
                 style="@style/TextView.S1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_8dp"
                 android:layout_marginTop="@dimen/dimen_32dp"
+                android:layout_marginEnd="@dimen/dimen_32dp"
                 android:layout_marginBottom="@dimen/dimen_32dp"
-                android:paddingEnd="@dimen/dimen_32dp"
                 android:textAlignment="viewStart"
                 android:textColor="@color/colorGrayDC"
                 app:actions="@{viewModel.termsAndConditionsSpanActions}"
-                app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toTopOf="@id/btn_finish_signup"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
