--- a/app/src/main/res/layout/fr_onboarding_step.xml
+++ b/app/src/main/res/layout/fr_onboarding_step.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/gl_header"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginBottom="@dimen/dimen_48dp"
+                android:layout_marginBottom="@dimen/dimen_64dp"
                 app:layout_constraintBottom_toBottomOf="@id/top_iv" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -55,39 +55,38 @@
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_onboarding_title"
-                    style="@style/TextView.Bold"
+                    style="@style/TextView.H2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/dimen_48dp"
-                    android:textSize="@dimen/size_28sp"
+                    android:layout_marginHorizontal="@dimen/dimen_32dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:textRes="@{viewModel.model.title}"
-                    tools:text="@string/onboarding_title_3" />
+                    tools:text="@string/onboarding_title_1" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_onboarding_in_progress"
-                    style="@style/TextView.Regular"
+                    style="@style/TextView.C1"
                     visibility="@{viewModel.model.inProgress}"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/dimen_8dp"
                     android:text="@string/work_in_progress"
                     android:textColor="@color/colorGrayB6"
-                    android:textSize="@dimen/size_12sp"
                     app:layout_constraintEnd_toEndOf="@+id/tv_onboarding_title"
                     app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_title"
                     tools:text="@string/work_in_progress" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_onboarding_subtitle"
-                    style="@style/TextView.Bold"
+                    style="@style/TextView.S1"
                     visibility="@{viewModel.model.subtitle != null}"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/dimen_48dp"
-                    android:textSize="@dimen/size_18sp"
+                    android:layout_marginHorizontal="@dimen/dimen_32dp"
+                    android:layout_marginTop="@dimen/dimen_16dp"
+                    android:lineSpacingExtra="@dimen/dimen_4dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_title"
@@ -97,15 +96,15 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_onboarding_content"
-                style="@style/TextView.Regular"
+                style="@style/TextView.C1"
                 visibility="@{viewModel.model.content != null}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/dimen_48dp"
+                android:layout_marginHorizontal="@dimen/dimen_32dp"
                 android:layout_marginTop="@dimen/dimen_12dp"
+                android:layout_marginBottom="@dimen/dimen_12dp"
                 android:lineSpacingExtra="@dimen/dimen_4dp"
                 android:textColor="@color/colorGrayB6"
-                android:textSize="@dimen/size_12sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_news"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -115,22 +114,21 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_onboarding_news"
-                style="@style/TextView.Regular"
+                style="@style/TextView.S1"
                 visibility="@{viewModel.model.news != null}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/dimen_48dp"
+                android:layout_marginHorizontal="@dimen/dimen_32dp"
                 android:layout_marginTop="@dimen/dimen_16dp"
                 android:layout_marginBottom="@dimen/dimen_12dp"
                 android:lineSpacingExtra="@dimen/dimen_8dp"
-                android:textSize="@dimen/size_12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_content"
                 app:layout_constraintVertical_bias="0.0"
                 app:textRes="@{viewModel.model.news}"
-                tools:text="@string/onboarding_news_1" />
+                tools:text="@string/onboarding_news_2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
