Remove login password validation Force logout for a user closed by admin Update membership status after pausing the account

--- a/app/src/main/res/layout/fr_choose_password.xml
+++ b/app/src/main/res/layout/fr_choose_password.xml
@@ -112,8 +112,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_8dp"
                 android:layout_marginTop="@dimen/dimen_32dp"
-                android:layout_marginEnd="@dimen/dimen_32dp"
                 android:layout_marginBottom="@dimen/dimen_32dp"
+                android:paddingEnd="@dimen/dimen_24dp"
                 android:textAlignment="viewStart"
                 android:textColor="@color/colorGrayDC"
                 app:actions="@{viewModel.termsAndConditionsSpanActions}"
