--- a/app/src/main/res/layout/item_delivery_method.xml
+++ b/app/src/main/res/layout/item_delivery_method.xml
@@ -20,7 +20,8 @@
         android:backgroundTint="@android:color/transparent"
         android:clipToPadding="false"
         android:outlineProvider="background"
-        app:disabled="@{viewModel.disabled || !viewModel.deliveryMethod.available}">
+        app:disabled="@{viewModel.disabled || !viewModel.deliveryMethod.available}"
+        app:layout_optimizationLevel="none">
 
         <ImageView
             android:id="@+id/background_iv"
@@ -75,39 +76,51 @@
         <TextView
             android:id="@+id/delivery_method_name_tv"
             style="@style/TextView.H6"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_12dp"
             android:text="@{viewModel.deliveryMethod.methodName}"
+            android:textAlignment="viewStart"
             android:textColor="@{ContextCompat.getColor(context, viewModel.deliveryMethod.tint)}"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="@id/delivery_method_name_guideline"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/icon_iv"
             app:layout_constraintTop_toBottomOf="@id/icon_iv"
             tools:text="Regular"
             tools:textColor="@color/colorGreen71" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/delivery_method_name_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".5" />
+
         <ImageView
             android:id="@+id/arrow_iv"
             android:layout_width="@dimen/dimen_16dp"
             android:layout_height="@dimen/dimen_16dp"
-            android:layout_marginStart="@dimen/dimen_8dp"
+            android:layout_marginStart="@dimen/dimen_4dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_arrow_forward"
             app:hidden="@{!viewModel.deliveryMethod.available}"
-            app:layout_constraintBottom_toBottomOf="@id/delivery_method_name_tv"
+            app:layout_constraintBottom_toTopOf="@id/delivery_method_name_tv"
             app:layout_constraintStart_toEndOf="@id/delivery_method_name_tv"
-            app:layout_constraintTop_toTopOf="@id/delivery_method_name_tv"
+            app:layout_constraintTop_toTopOf="@id/delivery_method_barrier"
             app:tint="@{ContextCompat.getColor(context, viewModel.deliveryMethod.tint)}"
             tools:tint="@color/colorGreen71" />
 
         <TextView
             android:id="@+id/delivery_method_value_tv"
             style="@style/TextView.H6"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_8dp"
+            android:layout_marginStart="@dimen/dimen_4dp"
             android:layout_marginTop="@dimen/dimen_16dp"
             android:layout_marginEnd="@dimen/dimen_20dp"
             android:text="@{viewModel.cost}"
+            android:textAlignment="viewStart"
             android:textColor="@{ContextCompat.getColor(context, viewModel.deliveryMethod.tint)}"
             app:hidden="@{!viewModel.deliveryMethod.available}"
             app:layout_constraintBaseline_toBaselineOf="@id/delivery_method_name_tv"
@@ -116,6 +129,13 @@
             app:layout_constraintStart_toEndOf="@id/arrow_iv"
             tools:text="Free"
             tools:textColor="@color/colorGreen71" />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/delivery_method_barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="delivery_method_value_tv, delivery_method_name_tv" />
 
         <TextView
             android:id="@+id/delivery_method_description_tv"
@@ -130,7 +150,7 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="@id/delivery_method_name_tv"
-            app:layout_constraintTop_toBottomOf="@id/delivery_method_name_tv"
+            app:layout_constraintTop_toBottomOf="@id/delivery_method_barrier"
             tools:text="1-3 working days" />
 
         <ImageView
@@ -140,13 +160,13 @@
             android:layout_marginStart="@dimen/dimen_4dp"
             android:importantForAccessibility="no"
             android:src="@drawable/ic_info"
+            app:delivery_tooltip_text="@{viewModel.deliveryMethod.tooltipText}"
             app:layout_constraintBottom_toBottomOf="@id/delivery_method_description_tv"
             app:layout_constraintEnd_toEndOf="@id/delivery_method_value_tv"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/delivery_method_description_tv"
             app:layout_constraintTop_toTopOf="@id/delivery_method_description_tv"
-            app:tint="@color/colorGrayDC"
-            app:delivery_tooltip_text="@{viewModel.deliveryMethod.tooltipText}" />
+            app:tint="@color/colorGrayDC" />
 
         <TextView
             android:id="@+id/delivery_method_secondary_description_tv"
