UI changes on claim cash

--- a/app/src/main/res/layout/fr_claim_cash.xml
+++ b/app/src/main/res/layout/fr_claim_cash.xml
@@ -46,11 +46,16 @@
 
             <TextView
                 android:id="@+id/tv_title"
-                style="@style/TextView.H1"
+                style="@style/TextView.H2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_20dp"
                 android:text="@string/claim_cash_title"
+                android:textAlignment="viewStart"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintEnd_toStartOf="@id/iv_title_end"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ib_back" />
 
@@ -58,7 +63,8 @@
                 android:id="@+id/iv_title_end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_16dp"
+                android:layout_marginStart="@dimen/dimen_4dp"
+                android:layout_marginEnd="@dimen/dimen_12dp"
                 android:contentDescription="@null"
                 android:src="@drawable/ic_smiley_face"
                 app:layout_constraintBottom_toBottomOf="@id/tv_title"
@@ -72,7 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_20dp"
-                android:layout_marginTop="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/dimen_16dp"
                 android:background="@drawable/rounded_layout_20dp"
                 android:backgroundTint="@color/colorPrimaryDark"
                 app:layoutDescription="@xml/cash_amount_description"
@@ -84,7 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="@dimen/dimen_32dp"
-                    android:layout_marginStart="@dimen/dimen_20dp"
+                    android:layout_marginStart="@dimen/dimen_12dp"
                     android:contentDescription="@null"
                     android:src="@drawable/ic_cash_amount_start"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -94,10 +100,10 @@
 
                 <TextView
                     android:id="@+id/tv_cash_amount"
-                    style="@style/TextView.H6"
+                    style="@style/TextView.H7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimen_12dp"
+                    android:layout_marginStart="@dimen/dimen_8dp"
                     android:text="@string/claim_cash_cash_amount"
                     app:layout_constraintBottom_toBottomOf="@id/iv_cash_amount_start"
                     app:layout_constraintStart_toEndOf="@id/iv_cash_amount_start"
@@ -107,7 +113,7 @@
                     android:id="@+id/iv_cash_amount_arrow"
                     android:layout_width="@dimen/dimen_16dp"
                     android:layout_height="@dimen/dimen_16dp"
-                    android:layout_marginStart="@dimen/dimen_8dp"
+                    android:layout_marginStart="@dimen/dimen_4dp"
                     android:contentDescription="@null"
                     android:src="@drawable/ic_arrow_forward"
                     app:layout_constraintBottom_toBottomOf="@id/tv_cash_amount"
@@ -119,7 +125,7 @@
                     style="@style/TextView.S2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/dimen_12dp"
+                    android:layout_marginHorizontal="@dimen/dimen_4dp"
                     android:maxLines="1"
                     android:text="@{@string/dollar_amount_float(viewModel.amount)}"
                     android:textAlignment="textStart"
@@ -140,7 +146,7 @@
                     android:id="@+id/ib_edit_cash_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/dimen_20dp"
+                    android:layout_marginEnd="@dimen/dimen_12dp"
                     android:background="@null"
                     android:contentDescription="@null"
                     android:src="@drawable/ic_edit"
@@ -154,7 +160,7 @@
                     style="@style/TextView.S2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/dimen_20dp"
+                    android:layout_marginEnd="@dimen/dimen_12dp"
                     android:onClick="@{() -> viewModel.saveAmount()}"
                     android:text="@string/save"
                     android:textColor="@color/colorGreen71"
@@ -181,7 +187,7 @@
                 android:id="@+id/iv_alert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginStart="@dimen/dimen_16dp"
                 android:layout_marginTop="@dimen/dimen_12dp"
                 android:contentDescription="@null"
                 android:src="@drawable/ic_alert"
@@ -204,7 +210,7 @@
                 style="@style/TextView.S1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/dimen_16dp"
                 android:textAlignment="textEnd"
                 app:isZonedDate="@{false}"
                 app:layout_constraintBottom_toBottomOf="@id/tv_due_date_label"
@@ -219,9 +225,11 @@
                 style="@style/TextView.H4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_24dp"
+                android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_20dp"
                 android:text="@string/claim_cash_delivery_method_title"
+                android:textAlignment="viewStart"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_alert" />
 
@@ -255,8 +263,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
-                android:layout_marginTop="@dimen/dimen_24dp"
-                android:layout_marginBottom="@dimen/dimen_24dp"
+                android:layout_marginTop="@dimen/dimen_20dp"
+                android:layout_marginBottom="@dimen/dimen_20dp"
                 android:enabled="@{viewModel.cashAdvancesLimits != null}"
                 android:onClick="@{() -> viewModel.continueToQuiz()}"
                 android:text="@string/continue_name"
