--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -230,6 +230,11 @@
         <item name="android:textSize">@dimen/size_16sp</item>
     </style>
 
+    <style name="TextView.H7" parent="TextView">
+        <item name="fontFamily">@font/lato_semi_bold</item>
+        <item name="android:textSize">@dimen/size_14sp</item>
+    </style>
+
     <style name="TextView.S1" parent="TextView">
         <item name="fontFamily">@font/lato</item>
         <item name="android:textSize">@dimen/size_14sp</item>
